Fixed bug with photo on mobile.

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #photo {
-  padding-right:2.5em;
+  width:100%;
   position:relative;
   float:right;
 }
